modern extensions, fix bleed between parts, fix shadown elements

--- a/aplcart.css
+++ b/aplcart.css
@@ -20,7 +20,7 @@ td a{margin-right:0.75em;color:#bbb}
 td:first-child a:before{content:'';border:0.6ex solid transparent;border-left:1ex solid currentcolor;display:inline-block;position:relative;margin-left:0.33ex;line-height:0;border-right:none}
 #a{position:absolute;right:4.5em;bottom:0em;height:1em}
 #s{position:absolute;right:2.4em;bottom:0em}
-#w{right:0;background:linear-gradient(to right,currentcolor 50%,transparent 50%)}
+#w{right:0;background:linear-gradient(to right,currentcolor 50%,transparent 50%);position:relative}
 #e{margin:0 .5em}
 #x{margin:0 0.75em 0 -1.5em}
 #c{right:0.1em;position:relative}
